src/pic.y
%{
    #include "pic.cc"
    extern "C" void yyerror(const char *s);
    extern int yylex(void);
	extern vector<unordered_map<string, express*>> table;
%}

%union{
	string *name;	
	express* exp;
	TreeNode* tree;
	expr_coll* wrap_exp;
	Scope* scop;
	block* stmt_wrap;
	vector<TreeNode*>* vector_TreeNodes;
}

%token INT_CONST FLT_CONST NAME LET FOR WHILE IF ELSE FUNC NOT EQUAL			// Token declarations (lexer uses these declarations to return tokens)

%left '+' '-' 											// Left associative operators '+' and '-'
%left '*' '/' 											// Left associative operators '*' and '/'
%right Uminus NOT										// Right associative unary minus operator
%nonassoc '<' '>' EQUAL NOT_EQUAL


%type <name> INT_CONST FLT_CONST NAME LET '(' ')' '{' '}' '[' ']' 		// Declare token types to be of type *string
%type <exp> expression 								// Declare the expression non-terminal to be of type *TreeNode
%type <tree> stmt 
%type <scop> block
%type <stmt_wrap> stmts
%type <wrap_exp> expressions

%start program 											// Starting rule for the grammar
%%

/* GRAMMAR */

program
	: stmts	{ 
			evaluate($1);
			programm *top = new programm($1); 
			// line commented for(int i=0;i<(*top->obj.node->obj.vec).size();i++){bfs((*top->obj.node->obj.vec)[i]);cout<<endl;}
			}
;

stmts
	: stmts stmt { 
			$1->push($2); 
			$$ = $1;
			} 
	| stmt	{ 
			vector<TreeNode*>* vec = new vector<TreeNode*>();
			vec->push_back($1);
			$$ = new block(vec); 	
			}
 
stmt
	: block												{ $$ = $1; }
	| LET NAME '=' expression ';'						{ $$ = new assign($2,$4,0); }
	| NAME '=' expression ';'							{ $$ = new assign($1,$3,1); }
	| NAME ';'     	 									{ $$ = new print_variable($1); }
	| FOR '(' stmt  expression ';' stmt ')' block		{ $$ = new For($3,$4,$6,$8); }
	| WHILE '(' expression ')' block					{ $$ = new While($3,$5); }
	| IF '(' expression ')' block ELSE block	   		{ $$ = new if_else($3,$5,$7); }
; 
	
block
	:'{' stmts '}' 										{ $$ = new Scope($2); }
;

expressions
    : expressions ',' expression                        { $1->push($3); $$ = $1; }
    | expression                                        { vector<TreeNode*>* vec = new vector<TreeNode*>(); vec->push_back($1); $$ = new expr_coll(vec); }
;

expression
	: '(' expression ')'				                { $$ = $2; }
    | '[' expressions ']'                               { $$ = new express(($2)); }
	| expression '/' expression							{ auto ret = new express("/"); ret->left = $1; ret->right = $3; $$ = ret;  }
	| expression '*' expression							{ auto ret = new express("*"); ret->left = $1; ret->right = $3; $$ = ret;  }
	| expression '+' expression							{ auto ret = new express("+"); ret->left = $1; ret->right = $3; $$ = ret;  }
	| expression '-' expression					 		{ auto ret = new express("-"); ret->left = $1; ret->right = $3; $$ = ret;  }
	| expression '<' expression							{ auto ret = new express("<"); ret->left = $1; ret->right = $3; $$ = ret;  }
	| expression '>' expression							{ auto ret = new express(">"); ret->left = $1; ret->right = $3; $$ = ret;  }
	| expression EQUAL expression						{ auto ret = new express("=="); ret->left = $1; ret->right = $3; $$ = ret; }
	| expression NOT_EQUAL expression					{ auto ret = new express("!="); ret->left = $1; ret->right = $3; $$ = ret; }
	| NOT expression 									{  }
	| '-' expression %prec Uminus						{ $$ = new express(*new Expression(-1 *($2->obj.exp.v.a))); }
	| INT_CONST											{ $$ = new express(*new Expression(atoi($1->c_str()))); }
	| FLT_CONST											{ $$ = new express(*new Expression(atoi($1->c_str()))); }
	| NAME												{ $$ = variable($1); }
;

%%

/* ADDITIONAL C CODE */

int main() {
	table.push_back(unordered_map<string, express*>()); 
	yyparse();
    return 0;
}
